# bpla_propeller

./: README.md  README.ru.md
bpla_control/: package.xml  setup.cfg  setup.py
bpla_control/bpla_control/: hover_controller.py  landing_controller.py  mission_controller.py
bpla_description/: CMakeLists.txt  package.xml
bpla_description/launch/: display.launch.py  display_bridge.launch.py  display_with_propellers.launch.py  full_system.launch.py
bpla_description/urdf/: quadcopter.urdf  quadcopter_gazebo.urdf
bpla_diagnostics/: CMakeLists.txt  package.xml
bpla_diagnostics/src/: imu_simulator.cpp  vibration_monitor.cpp
bpla_gazebo/: CMakeLists.txt  package.xml
bpla_gazebo/launch/: simulate.launch.py
bpla_gazebo/plugins/: quadcopter_thrust_plugin.cpp
bpla_gazebo/scripts/: thrust_controller.py
bpla_gazebo/worlds/: empty_with_plugins.world
bpla_mavlink/: CMakeLists.txt  package.xml
bpla_mavlink/bpla_mavlink/: mavlink_bridge.py
bpla_mavlink/src/: mavlink_commander.cpp
bpla_propeller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
bpla_propeller/bpla_propeller/: __init__.py  propeller_joint_bridge.py  propeller_sim.py  propeller_viz.py
bpla_propeller_msgs/: CMakeLists.txt  package.xml
bpla_propeller_msgs/msg/: PropellerCommand.msg
bpla_remote/: CMakeLists.txt  package.xml
bpla_remote/scripts/: rms_client.py
bpla_remote/src/: rms_server.cpp
