<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bpla_diagnostics</name>
  <version>0.0.1</version>
  <description>FFT vibration analysis for BPLA</description>
  <maintainer email="anisimovevgenij90@gmail.com">Evgenii_Anisimov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bpla_propeller_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
