<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bpla_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation with thrust controller for quadcopter</description>
  <maintainer email="anisimovevgenij90@gmail.com">Evgenii_Anisimov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>bpla_propeller_msgs</depend>
  <depend>gazebo_ros_pkgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
