cmake_minimum_required(VERSION 3.8)
project(bpla_remote)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(bpla_propeller_msgs REQUIRED)
add_executable(rms_server src/rms_server.cpp)
ament_target_dependencies(rms_server rclcpp bpla_propeller_msgs)
install(TARGETS rms_server DESTINATION lib/${PROJECT_NAME})
install(PROGRAMS scripts/rms_client.py DESTINATION lib/${PROJECT_NAME})
ament_package()
